[package]
name = "roll-api"
version = "0.1.0"
authors = ["Thomas Lackemann <tommylackemann@gmail.com>"]

[dependencies]
chrono = { version = "0.4.0", features = [ "serde" ] }
rand = "0.3"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
ttml = { git = "https://github.com/UnicornHeartClub/tabletop-macro-language" }
serde = "1.0.16"
serde_derive = "1.0.16"
serde_json = "1.0.4"
uuid = { version = "0.4", features = [ "serde", "v4" ] }
 
[patch.crates-io]
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.11" }

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "v0.3"
default-features = false
features = ["json"]

